--- a/boostrap/application.yaml
+++ b/boostrap/application.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cluster-operators
+  namespace openshift-gitops
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
