--- a/resources/templates/bindings.yaml
+++ b/resources/templates/bindings.yaml
@@ -4,6 +4,8 @@ kind: PlacementBinding
 metadata:
   name: {{ .name }}-policy-placement
   namespace: policies
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"  
 placementRef:
   name: openshift-gitops
   apiGroup: cluster.open-cluster-management.io
