--- a/resources/templates/subscriptions.yaml
+++ b/resources/templates/subscriptions.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .name }}-policy
   namespace: policies
   annotations:
+    argocd.argoproj.io/sync-wave: "1"  
     policy.open-cluster-management.io/categories: ""
     policy.open-cluster-management.io/standards: ""
     policy.open-cluster-management.io/controls: ""
