--- a/resources/values.yaml
+++ b/resources/values.yaml
@@ -15,6 +15,12 @@ subscriptions:
     clusterSet: gitops-cluster
 
   - name: elastictsearch-operator
-    namespace: openshift-operators-redhat
+    namespace: openshift-operators
     channel: stable-5.8
+    clusterSet: gitops-cluster
+
+
+  - name: cluster-logging
+    namespace: openshift-operators
+    channel: stable
     clusterSet: gitops-cluster
