--- a/resources/values.yaml
+++ b/resources/values.yaml
@@ -14,13 +14,18 @@ subscriptions:
     channel: stable-4.12
     clusterSet: gitops-cluster
 
-  - name: elastictsearch-operator
-    namespace: openshift-operators
-    channel: stable-5.8
-    clusterSet: gitops-cluster
+#  - name: elastictsearch-operator
+#    namespace: openshift-operators
+#    channel: stable-5.8
+#    clusterSet: gitops-cluster
 
 
   - name: cluster-logging
     namespace: openshift-operators
     channel: stable
+    clusterSet: gitops-cluster
+
+  - name: grafana-operator
+    namespace: openshift-operators
+    channel: v4
     clusterSet: gitops-cluster
