--- a/resources/values.yaml
+++ b/resources/values.yaml
@@ -25,7 +25,7 @@ subscriptions:
     channel: stable
     clusterSet: gitops-cluster
 
-  - name: grafana-operator
-    namespace: openshift-operators
-    channel: v4
-    clusterSet: gitops-cluster
+#  - name: grafana-operator
+#    namespace: openshift-operators
+#    channel: v4
+#    clusterSet: gitops-cluster
