--- a/resources/operators/values.yaml
+++ b/resources/operators/values.yaml
@@ -1,4 +1,3 @@
-c
 subscriptions:
   - name: 3scale-operator
     namespace: 3scale
@@ -8,37 +7,28 @@ subscriptions:
     namespace: openshift-operator
     channel: threescale-mas
     clusterSet: gitops-cluster
-
   - name: odf-operator
     namespace: openshift-storage
     channel: stable-4.12
-    clusterSet: gitops-cluster
-
-#  - name: elastictsearch-operator
-#    namespace: openshift-operators
-#    channel: stable-5.8
-#    clusterSet: gitops-cluster
-
-  - name: rhbk-operator
-    channel: stable-v22
-    clusterSet: gitops-cluster
-    namespace: keycloak
-  
-  
+    clusterSet: gitops-cluster  
   - name: cluster-logging
     namespace: openshift-operators
     channel: stable
     clusterSet: gitops-cluster
-
-
-
   - name: rhods-prometheus-operator
     channel: beta
     installPlanApproval: Automatic
     namespace: prometheus-operator
     clusterSet: gitops-cluster
-
+  - name: rhbk-operator
+    channel: stable-v22
+    clusterSet: gitops-cluster
+    namespace: rhbk-operator
 #  - name: grafana-operator
 #    namespace: openshift-operators
 #    channel: v4
+#    clusterSet: gitops-cluster
+#  - name: elastictsearch-operator
+#    namespace: openshift-operators
+#    channel: stable-5.8
 #    clusterSet: gitops-cluster
