--- a/boostrap/application.yaml
+++ b/boostrap/application.yaml
@@ -7,18 +7,13 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
   project: default
-  sources:
-    - path: resources/operators
-      repoURL: 'https://github.com/pcastelo/prueba-operators.git'
-      targetRevision: HEAD
-      helm:
-        valueFiles:
-          - values.yaml
-    - path: resources/
-      repoURL: 'https://github.com/pcastelo/prueba-operators.git'
-      targetRevision: HEAD
-      ref: myRepo  
-
+  source:
+    path: resources
+    repoURL: 'https://github.com/pcastelo/prueba-operators.git'
+    targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values.yaml
   syncPolicy:
     automated:
       selfHeal: true
